--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,4 +1,4 @@
-name: Playwright Tests
+name: Playwright Tests with Allure
 on:
   push:
     branches: [ main, master ]
@@ -18,10 +18,23 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install allure-pytest
     - name: Ensure browsers are installed
       run: python -m playwright install --with-deps
     - name: Run your tests
-      run: pytest --tracing=retain-on-failure
+      run: pytest --tracing=retain-on-failure --alluredir=allure-results
+    - name: Generate Allure Report
+      run: |
+        pip install allure-python-commons
+        allure serve allure-results
+      continue-on-error: true  # This allows the action to continue even if the allure command fails
+
+    - name: Upload Allure Report as an artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: allure-report
+        path: allure-results/
+        
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
