--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,34 +1,34 @@
-name: Playwright Tests with Allure
+name: Playwright Tests with Allure Reports
 on:
   push:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
 jobs:
+
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
+    
     - uses: actions/checkout@v4
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.13.3'
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install allure-pytest
+        
     - name: Ensure browsers are installed
       run: python -m playwright install --with-deps
+      
     - name: Run your tests
       run: pytest --tracing=retain-on-failure --alluredir=allure-results
-    - name: Generate Allure Report
-      run: |
-        pip install allure-python-commons
-        allure serve allure-results
-      continue-on-error: true  # This allows the action to continue even if the allure command fails
-
+      
     - name: Upload Allure Report as an artifact
       uses: actions/upload-artifact@v4
       with:
