--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -31,6 +31,7 @@ jobs:
       
     - name: Upload Allure Report as an artifact
       uses: actions/upload-artifact@v4
+      if: always()
       with:
         name: allure-report
         path: allure-results/
